--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <title>Email List</title>
 </head>
 <body>
-  <form action="/search" method="post" enctype="application/x-www-form-urlencoded">
+  <form id="search-form" action="/search" method="post">
     <input id="email_address" type="text" placeholder="user@example.com" name="email_address" />
     <br/>
     <input type="submit" value="Search"/>
