script front-end to submit search form via fetch call

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
   <form id="search-form" action="/search" method="post">
     <input id="email_address" type="text" placeholder="user@example.com" name="email_address" />
     <br/>
-    <input type="submit" value="Search"/>
+    <pre id="output" width="500" height="500"></pre>
+    <br/>
+    <input id="search-submit" type="submit" value="Search"/>
   </form>
+  <script src="index.js"></script>
 </body>
 </html>
